--- a/updine-user/Base.lproj/Main.storyboard
+++ b/updine-user/Base.lproj/Main.storyboard
@@ -49,7 +49,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <tabBarItem key="tabBarItem" image="home" selectedImage="home" id="LCh-0s-2Uf">
+                    <tabBarItem key="tabBarItem" image="mappin.and.ellipse" catalog="system" selectedImage="home" id="LCh-0s-2Uf">
                         <inset key="imageInsets" minX="0.0" minY="8" maxX="0.0" maxY="-8"/>
                         <color key="badgeColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="0.0"/>
@@ -64,18 +64,14 @@
             </objects>
             <point key="canvasLocation" x="1079.2" y="132.26600985221674"/>
         </scene>
-        <!--View Controller-->
+        <!--Feed View Controller-->
         <scene sceneID="zff-f1-3Xp">
             <objects>
-                <viewController id="VNt-kv-JtS" sceneMemberID="viewController">
+                <viewController id="VNt-kv-JtS" customClass="FeedViewController" customModule="updine_user" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="i6E-Y4-21b">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="profile" translatesAutoresizingMaskIntoConstraints="NO" id="fF9-de-yyH">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="729"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BDI-Xu-ine">
                                 <rect key="frame" x="16" y="66" width="73" height="67"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -85,7 +81,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="EeQ-ih-to5"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" image="profile-1" selectedImage="profile-1" id="KSD-IC-sz6">
+                    <tabBarItem key="tabBarItem" title="" image="dollarsign.circle" catalog="system" selectedImage="profile-1" id="KSD-IC-sz6">
                         <inset key="imageInsets" minX="0.0" minY="8" maxX="0.0" maxY="-8"/>
                     </tabBarItem>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
@@ -120,7 +116,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="JVF-LA-HrF"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" image="wolrd" selectedImage="wolrd" id="9EU-cH-4d3">
+                    <tabBarItem key="tabBarItem" title="" image="person.circle" catalog="system" selectedImage="wolrd" id="9EU-cH-4d3">
                         <inset key="imageInsets" minX="0.0" minY="8" maxX="0.0" maxY="-8"/>
                     </tabBarItem>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
@@ -384,15 +380,17 @@
     </scenes>
     <resources>
         <image name="dineDetails" width="122.33333587646484" height="466.66665649414062"/>
+        <image name="dollarsign.circle" catalog="system" width="64" height="60"/>
         <image name="home" width="30" height="30"/>
+        <image name="mappin.and.ellipse" catalog="system" width="58" height="64"/>
         <image name="pay2" width="743" height="1400"/>
-        <image name="profile" width="739" height="1400"/>
+        <image name="person.circle" catalog="system" width="64" height="60"/>
         <image name="profile-1" width="30" height="30"/>
         <image name="rsvp2" width="738" height="1400"/>
         <image name="wolrd" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="tle-pe-dWt"/>
+        <segue reference="U4S-7r-S8Z"/>
         <segue reference="uy9-jF-1R4"/>
     </inferredMetricsTieBreakers>
 </document>
