--- a/updine-user/Base.lproj/Main.storyboard
+++ b/updine-user/Base.lproj/Main.storyboard
@@ -49,7 +49,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <tabBarItem key="tabBarItem" image="mappin.and.ellipse" catalog="system" selectedImage="home" id="LCh-0s-2Uf">
+                    <tabBarItem key="tabBarItem" image="mappin.and.ellipse" catalog="system" id="LCh-0s-2Uf">
                         <inset key="imageInsets" minX="0.0" minY="8" maxX="0.0" maxY="-8"/>
                         <color key="badgeColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="0.0"/>
@@ -81,7 +81,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="EeQ-ih-to5"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" image="dollarsign.circle" catalog="system" selectedImage="profile-1" id="KSD-IC-sz6">
+                    <tabBarItem key="tabBarItem" title="" image="dollarsign.circle" catalog="system" id="KSD-IC-sz6">
                         <inset key="imageInsets" minX="0.0" minY="8" maxX="0.0" maxY="-8"/>
                     </tabBarItem>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
@@ -116,7 +116,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="JVF-LA-HrF"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" image="person.circle" catalog="system" selectedImage="wolrd" id="9EU-cH-4d3">
+                    <tabBarItem key="tabBarItem" title="" image="person.circle" catalog="system" id="9EU-cH-4d3">
                         <inset key="imageInsets" minX="0.0" minY="8" maxX="0.0" maxY="-8"/>
                     </tabBarItem>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
@@ -368,9 +368,9 @@
                         <color key="backgroundColor" red="0.95686274509803915" green="0.17254901960784313" blue="0.32549019607843138" alpha="0.0" colorSpace="calibratedRGB"/>
                     </tabBar>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="IKG-GB-fOl"/>
                         <segue destination="VNt-kv-JtS" kind="relationship" relationship="viewControllers" id="ovy-Ml-zPz"/>
                         <segue destination="ikl-Be-G8a" kind="relationship" relationship="viewControllers" id="hXL-fd-uAo"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="XID-bf-iXY"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HMr-H3-haz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -381,13 +381,10 @@
     <resources>
         <image name="dineDetails" width="122.33333587646484" height="466.66665649414062"/>
         <image name="dollarsign.circle" catalog="system" width="64" height="60"/>
-        <image name="home" width="30" height="30"/>
         <image name="mappin.and.ellipse" catalog="system" width="58" height="64"/>
         <image name="pay2" width="743" height="1400"/>
         <image name="person.circle" catalog="system" width="64" height="60"/>
-        <image name="profile-1" width="30" height="30"/>
         <image name="rsvp2" width="738" height="1400"/>
-        <image name="wolrd" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="U4S-7r-S8Z"/>
