--- a/updine-user/Base.lproj/Main.storyboard
+++ b/updine-user/Base.lproj/Main.storyboard
@@ -88,7 +88,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ndS-vd-m8k" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4009" y="1520"/>
+            <point key="canvasLocation" x="2759" y="1158"/>
         </scene>
         <!--Profile-->
         <scene sceneID="WQH-9q-OKj">
@@ -143,7 +143,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="180"/>
                                         <subviews>
                                             <webView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2RC-4X-mNO">
-                                                <rect key="frame" x="67" y="52" width="240" height="128"/>
+                                                <rect key="frame" x="67" y="44" width="240" height="128"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             </webView>
@@ -205,31 +205,6 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="375" height="1400"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             </imageView>
-                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rgk-zs-hD3">
-                                                <rect key="frame" x="254" y="285" width="86" height="96"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <connections>
-                                                    <segue destination="P7t-JT-wXL" kind="presentation" modalPresentationStyle="fullScreen" id="vSh-Rn-gQj"/>
-                                                </connections>
-                                            </button>
-                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3K5-ga-kaz">
-                                                <rect key="frame" x="8" y="64" width="86" height="51"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            </button>
-                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v2U-yP-tfj">
-                                                <rect key="frame" x="219" y="404" width="121" height="69"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <connections>
-                                                    <segue destination="1kI-Vs-T2p" kind="presentation" modalPresentationStyle="fullScreen" id="rnz-qK-cDI"/>
-                                                </connections>
-                                            </button>
-                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZMf-em-7VW">
-                                                <rect key="frame" x="8" y="30" width="93" height="74"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <connections>
-                                                    <segue destination="cXK-ks-RJx" kind="presentation" modalPresentationStyle="fullScreen" id="U4S-7r-S8Z"/>
-                                                </connections>
-                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <constraints>
@@ -259,7 +234,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xbE-IY-t4b" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2837.5999999999999" y="131.52709359605913"/>
+            <point key="canvasLocation" x="2823" y="118"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="biP-1T-x27">
@@ -382,17 +357,17 @@
             <objects>
                 <viewController id="1C7-b2-6cg" customClass="FeedViewController" customModule="updine_user" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="w7i-ZI-BtW">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="1400"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="1564"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="knG-RG-WRz">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="1400"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="1564"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ur8-Fm-hIh">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="1400"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Feed" translatesAutoresizingMaskIntoConstraints="NO" id="U9X-nD-kFZ">
-                                                <rect key="frame" x="0.0" y="0.0" width="375" height="1400"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="1564"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             </imageView>
                                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ugn-rQ-z6D">
@@ -437,7 +412,7 @@
                         <viewLayoutGuide key="safeArea" id="FV4-Nc-YgO"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Invest" image="dollarsign.circle" catalog="system" selectedImage="dollarsign.circle" id="PfW-gO-KeE"/>
-                    <size key="freeformSize" width="375" height="1400"/>
+                    <size key="freeformSize" width="375" height="1564"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="U4v-YB-2om" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -445,7 +420,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Feed" width="1125" height="4374"/>
+        <image name="Feed" width="1125" height="4692"/>
         <image name="dineDetails" width="122.33333587646484" height="466.66665649414062"/>
         <image name="dollarsign.circle" catalog="system" width="64" height="60"/>
         <image name="mappin.and.ellipse" catalog="system" width="58" height="64"/>
@@ -454,7 +429,6 @@
         <image name="rsvp2" width="738" height="1400"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="U4S-7r-S8Z"/>
-        <segue reference="uy9-jF-1R4"/>
+        <segue reference="E0e-AR-tsh"/>
     </inferredMetricsTieBreakers>
 </document>
