--- a/updine-user/Base.lproj/Main.storyboard
+++ b/updine-user/Base.lproj/Main.storyboard
@@ -85,7 +85,7 @@
                                 <rect key="frame" x="16" y="44" width="73" height="57"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <connections>
-                                    <segue destination="R75-15-Ri7" kind="presentation" modalPresentationStyle="fullScreen" id="lMf-ad-C8d"/>
+                                    <segue destination="R75-15-Ri7" kind="presentation" id="lMf-ad-C8d"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -158,11 +158,11 @@
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="226"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="CompanyVideo" translatesAutoresizingMaskIntoConstraints="NO" id="jO6-wI-5nP">
-                                                <rect key="frame" x="0.0" y="0.0" width="375" height="719"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="632"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             </imageView>
                                             <webView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2RC-4X-mNO">
-                                                <rect key="frame" x="34" y="44" width="318" height="174"/>
+                                                <rect key="frame" x="28" y="44" width="318" height="174"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             </webView>
@@ -180,15 +180,15 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Lc-1Q-sFB">
-                                <rect key="frame" x="138" y="652" width="99" height="36"/>
+                                <rect key="frame" x="128" y="639" width="118" height="40"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="TrebuchetMS-Bold" family="Trebuchet MS" pointSize="20"/>
+                                <fontDescription key="fontDescription" name="TrebuchetMS-Bold" family="Trebuchet MS" pointSize="24"/>
                                 <state key="normal" title="Read More">
                                     <color key="titleColor" red="0.20798527759999999" green="0.23915282600000001" blue="0.66666668650000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
                                 <connections>
                                     <action selector="meetingClicked:" destination="SsZ-Vb-pnH" eventType="touchUpInside" id="TXN-rd-1TP"/>
-                                    <segue destination="R75-15-Ri7" kind="presentation" modalPresentationStyle="fullScreen" id="YqB-Jo-Qg8"/>
+                                    <segue destination="R75-15-Ri7" kind="presentation" id="YqB-Jo-Qg8"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -412,7 +412,7 @@
                                                 <rect key="frame" x="8" y="112" width="332" height="308"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <connections>
-                                                    <segue destination="R75-15-Ri7" kind="presentation" modalPresentationStyle="fullScreen" id="Els-mn-NV5"/>
+                                                    <segue destination="R75-15-Ri7" kind="presentation" id="Els-mn-NV5"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -452,11 +452,11 @@
             <objects>
                 <viewController id="R75-15-Ri7" customClass="InfoViewController" customModule="updine_user" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="yZ0-3B-vf3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="3690"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="3636"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="RAq-XM-roG">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="3690"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="3636"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="e0m-zP-p9V">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="3690"/>
